# gravity_simulator

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt
docs/: links
gravity/: CMakeLists.txt  main.cpp  ocl_kernel.cpp  ocl_kernel.hpp  timer.hpp
src/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.hpp  main_window.ui  object.cpp  object.hpp  objects.cpp  objects.hpp  objects_scene.cpp  objects_scene.hpp  objects_view.cpp  objects_view.hpp  simulation_controller.cpp  simulation_controller.hpp  simulation_engine.cpp  simulation_engine.hpp  simulation_info_widget.cpp  simulation_info_widget.hpp  types.hpp
src/accelerators/: CMakeLists.txt  avx_accelerator.cpp  avx_accelerator.hpp  cpu_accelerator.cpp  cpu_accelerator.hpp  cpu_accelerator_base.cpp  cpu_accelerator_base.hpp  fake_openmp.cpp  iaccelerator.hpp  mt_accelerator_base.cpp  mt_accelerator_base.hpp  opencl_accelerator.cpp  opencl_accelerator.hpp  openmp_accelerator.cpp  openmp_accelerator.hpp  simple_cpu_accelerator.cpp  simple_cpu_accelerator.hpp
src/docs/: links.txt
src/gravity_core/: CMakeLists.txt  object.cpp  object.hpp  objects.cpp  objects.hpp  simulation_engine.cpp  types.hpp
src/gravity_core/accelerators/: CMakeLists.txt  avx_accelerator.cpp  avx_accelerator.hpp  cpu_accelerator_base.cpp  cpu_accelerator_base.hpp  detect_avx.c  forces_kernel.cl  iaccelerator.hpp  opencl_accelerator.cpp  opencl_accelerator.hpp  simple_cpu_accelerator.cpp  simple_cpu_accelerator.hpp
src/gravity_core/unit_tests/: CMakeLists.txt  accelerators_tests.cpp
src/gui/: CMakeLists.txt  main_window.cpp  main_window.hpp  main_window.ui  objects_scene.cpp  objects_scene.hpp  objects_view.cpp  simulation_controller.cpp  simulation_controller.hpp  simulation_info_widget.cpp  simulation_info_widget.hpp
src/tools/: CMakeLists.txt  file2hex.cpp
unit_tests/: CMakeLists.txt  accelerators_tests.cpp
